--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,12 +11,22 @@ jobs:
     runs-on: macos-15
 
     steps:
+      - name: Free Disk Space (Crucial!)
+        run: |
+          echo "Before cleanup:"
+          df -h
+          # 删除不需要的庞大组件以腾出空间 (约能腾出 10GB+)
+          sudo rm -rf /Users/runner/Library/Android/sdk
+          sudo rm -rf /usr/local/lib/node_modules
+          echo "After cleanup:"
+          df -h
+        
       - name: Install Tart
         run: brew install cirruslabs/cli/tart
 
       - name: Pull pre-built macOS Image
         # 获取一个已经配置好的轻量级 macOS 镜像 (Sequoia)
-        run: tart pull ghcr.io/cirruslabs/macos-sequoia-vanilla:15.1
+        run: tart pull ghcr.io/cirruslabs/macos-sonoma-vanilla:latest
 
       - name: Run Script inside VM
         run: |
@@ -33,4 +43,4 @@ jobs:
 
           # 使用 tart 运行虚拟机并执行脚本
           # 注意：在 CI 中运行 VM 非常消耗资源，可能会很慢
-          tart run ghcr.io/cirruslabs/macos-sequoia-vanilla:15.1 --command "bash" < guest_script.sh
+          tart run ghcr.io/cirruslabs/macos-sonoma-vanilla:latest --command "bash" < guest_script.sh
