--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,49 +1,110 @@
-name: QEMU Brute Force Emulation
+name: Run Linux VM (Software Emulation)
 
 on:
+  push:
   workflow_dispatch:
 
 jobs:
-  qemu-force:
+  run-linux-vm-emulated:
     runs-on: macos-15
+    # 移除了 timeout-minutes，防止因软件模拟过慢被强制结束
 
     steps:
-      - name: Install UTM
-        run: brew install --cask utm
-
-      - name: Locate QEMU and Force Run
+      - name: Free up disk space
+        # 清理 macOS Runner 上预装的庞大开发工具以腾出空间
         run: |
-          # 1. 动态寻找 QEMU 路径 (UTM 内部路径可能随版本变化)
-          QEMU_PATH=$(find /Applications/UTM.app -name "qemu-system-aarch64" -type f | head -n 1)
+          echo "Disk space before cleanup:"
+          df -h /
           
-          if [ -z "$QEMU_PATH" ]; then
-            echo "❌ 未找到 QEMU 引擎，尝试使用系统自带 QEMU"
-            brew install qemu
-            QEMU_PATH=$(which qemu-system-aarch64)
-          fi
+          # 删除预装的 Xcode 版本（保留默认连接的除外，但这里为了最大化空间尝试删除旧的）
+          # sudo rm -rf /Applications/Xcode*
           
-          echo "✅ 使用 QEMU 路径: $QEMU_PATH"
+          # 删除 Android SDKs
+          sudo rm -rf /Users/runner/Library/Android/sdk
+          
+          # 删除 .NET, Haskell, CodeQL 等预装库
+          sudo rm -rf /Users/runner/.dotnet
+          sudo rm -rf /usr/local/share/boost
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/pipx
+          
+          echo "Disk space after cleanup:"
+          df -h /
 
-          # 2. 尝试启动模拟
-          # 我们使用 -accel tcg (软件模拟) 而不是 hvf (硬件加速)
-          # 注意：这里我们不加载 13GB 的 macOS，因为磁盘会爆炸。
-          # 我们让 QEMU 启动并打印其支持的模拟硬件列表，证明它具备“强行模拟”的能力。
-          $QEMU_PATH \
-            -machine virt \
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install QEMU and Expect
+        run: |
+          brew update
+          # 安装 QEMU 和 Expect
+          brew install qemu expect
+
+      - name: Download Alpine Linux AArch64 (Virt ISO)
+        run: |
+          # 继续使用 Alpine Linux，因为它的体积小，在软件模拟模式下启动成功率最高
+          ISO_URL="https://dl-cdn.alpinelinux.org/alpine/v3.21/releases/aarch64/alpine-virt-3.21.0-aarch64.iso"
+          wget -O alpine.iso "$ISO_URL"
+
+      - name: Run VM with Software Emulation (TCG)
+        run: |
+          # 创建 expect 脚本
+          cat <<EOF > run_vm.exp
+          #!/usr/bin/expect -f
+          
+          # --- 重要：取消超时限制 ---
+          # 软件模拟非常慢，我们将 timeout 设置为 -1 (无限等待)，或者设置一个极大的值
+          set timeout -1
+
+          # 启动 QEMU
+          # -accel tcg: 强制使用软件模拟 (Tiny Code Generator)
+          # -cpu max: 使用 QEMU 支持的最佳特性（软件模拟下比 host 兼容性更好）
+          # -smp 1: 软件模拟下，多核通常不会带来性能提升，反而增加调度开销，建议单核
+          spawn qemu-system-aarch64 \
+            -machine virt,accel=tcg \
             -cpu max \
-            -accel tcg \
-            -display none \
-            -monitor stdio << 'EOF'
-          info status
-          info version
-          quit
+            -smp 1 \
+            -m 2048 \
+            -nographic \
+            -cdrom alpine.iso \
+            -netdev user,id=n1 -device virtio-net-pci,netdev=n1
+
+          # 打印一条日志提示用户正在等待
+          puts "VM started in software emulation mode. This will be slow. Waiting for login prompt..."
+
+          # 等待登录提示 (localhost login:)
+          expect "localhost login:"
+          
+          # 发送用户名
+          send "root\r"
+          
+          # 等待 Shell
+          expect "#"
+          
+          # --- 执行命令 ---
+          
+          send "echo '----------------------------------------'\r"
+          send "echo 'System Info (Inside VM)'\r"
+          
+          # 打印内核版本
+          send "uname -a\r"
+          
+          # 打印 CPU 信息 (注意查看是否显示为 TCG 或 QEMU virtual CPU)
+          send "cat /proc/cpuinfo | grep 'model name' | head -n 1\r"
+          
+          # 打印内存信息
+          send "free -h\r"
+          
+          send "echo '----------------------------------------'\r"
+          
+          # 关机
+          send "poweroff\r"
+          
+          # 等待关机完成
+          expect eof
           EOF
 
-      - name: Why macOS Guest Fails
-        run: |
-          echo "=================================================="
-          echo "💡 为什么无法直接在这里‘拉取并安装’ macOS？"
-          echo "1. 空间限制：macOS 镜像 (13GB) + 解压 (30GB) > Runner 空间 (14GB)。"
-          echo "2. 交互限制：macOS 安装需要鼠标点击，UTM 命令行无法自动化点击‘同意条款’。"
-          echo "3. 速度限制：TCG 模式下，macOS 开机需要约 4-8 小时。"
-          echo "=================================================="
+          chmod +x run_vm.exp
+          
+          # 使用 time 命令记录整个过程耗时
+          time ./run_vm.exp
