--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,10 @@
 name: Playwright Remote Debugging
 on: 
-  workflow_dispatch: # 仅支持手动触发
+  workflow_dispatch:
 
 jobs:
   debug-session:
     runs-on: ubuntu-latest
-    # 使用官方 Playwright Docker 镜像
     container:
       image: mcr.microsoft.com/playwright:v1.40.0-jammy
     
@@ -16,7 +15,6 @@ jobs:
       - name: Install Utilities
         run: apt-get update && apt-get install -y curl
 
-      # 1. 获取公网 IP (Localtunnel 安全验证需要用到)
       - name: Get Public IP
         id: public_ip
         run: |
@@ -24,26 +22,20 @@ jobs:
           echo "Runer Public IP: $IP"
           echo "ip=$IP" >> $GITHUB_OUTPUT
 
-      # 2. 启动 Playwright Server (后台运行)
       - name: Start Playwright Server
         run: |
           # 启动 Playwright Server 监听 9222 端口
-          # --host 0.0.0.0 允许外部容器访问
           nohup npx playwright launch-server --port 9222 --host 0.0.0.0 &
-          
-          # 等待服务启动
           sleep 3
           echo "Playwright Server started on port 9222"
 
-      # 3. 开启内网穿透并打印连接命令
       - name: Start Tunnel & Print Connection Command
         env:
           RUNNER_IP: ${{ steps.public_ip.outputs.ip }}
         run: |
-          # 安装 localtunnel
           npm install -g localtunnel
 
-          # 启动 tunnel (后台运行) 并将日志输出到文件以便提取 URL
+          # 启动 tunnel 并输出日志到文件
           lt --port 9222 > tunnel.log 2>&1 &
           
           echo "Waiting for tunnel URL..."
@@ -52,23 +44,31 @@ jobs:
           # 提取 URL
           TUNNEL_URL=$(grep -oE "https://[a-zA-Z0-9-]+\.loca\.lt" tunnel.log | head -1)
           
-          # 将 https 替换为 wss (Playwright 连接通常使用 ws/wss)
-          WS_ENDPOINT="${TUNNEL_URL/https/wss}/ws"
+          if [ -z "$TUNNEL_URL" ]; then
+            echo "Error: Failed to get tunnel URL. Printing log:"
+            cat tunnel.log
+            exit 1
+          fi
+
+          # --- 修复点在这里 ---
+          # 使用 sed 替换 https 为 wss，兼容 sh/dash shell
+          WS_BASE=$(echo "$TUNNEL_URL" | sed 's/https/wss/')
+          WS_ENDPOINT="${WS_BASE}/ws"
+          # ------------------
 
           echo "=========================================================="
           echo "🎉 远程调试环境已就绪！"
           echo ""
-          echo "⚠️  注意: 由于 Localtunnel 的安全机制，你首次访问可能需要验证 IP。"
+          echo "⚠️  注意: 必须先在浏览器打开下方链接并输入 IP 进行验证！"
           echo "👉  GitHub Runner 公网 IP: $RUNNER_IP"
           echo "👉  验证页面 (浏览器打开): $TUNNEL_URL"
           echo ""
-          echo "💻  在本地终端运行以下命令连接调试:"
+          echo "💻  本地连接命令:"
           echo "----------------------------------------------------------"
           echo "npx playwright connect --ws-endpoint=\"$WS_ENDPOINT\""
           echo "----------------------------------------------------------"
           echo "=========================================================="
 
-      # 4. 保持运行 10 分钟
       - name: Keep Alive for 10 Minutes
         run: |
           echo "Session will close in 10 minutes..."
